--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: update-chargers
+service: chargingbreak-api
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
@@ -59,6 +59,11 @@ functions:
   charger:
     handler: src/charger.main
     events:
+      - http:
+          path: charger
+          method: get
+          cors: false
+          integration: lambda-proxy
       - http:
           path: charger/{id}
           method: get
