--- a/resources/functions/adminUpdateChargers.yml
+++ b/resources/functions/adminUpdateChargers.yml
@@ -3,4 +3,4 @@ adminUpdateChargers:
   timeout: 300 #need a long timeout to load everything, this is max
   description: >
     Download latest data from supercharge.info and
-    load into DynamoDB:${self:provider.environment.SUPERCHARGERINFO_TABLE}
+    load into DynamoDB:${self:provider.environment.CHARGERS_TABLE}
