--- a/resources/tables/tips.yml
+++ b/resources/tables/tips.yml
@@ -1,12 +1,12 @@
 Resources:
-  tips: 
+  tipstable: 
     Type: 'AWS::DynamoDB::Table'
     DeletionPolicy: Retain
     Properties:
       TableName: ${self:provider.environment.TIPS_TABLE}
       AttributeDefinitions:
         - AttributeName: "id"
-          AttributeType: "N"
+          AttributeType: "S"
         - AttributeName: charger_id
           AttributeType: "N"
       KeySchema:
