--- a/serverless.yml
+++ b/serverless.yml
@@ -47,6 +47,7 @@ functions:
   - ${file(resources/functions/charger.yml)}
   - ${file(resources/functions/adminUpdateChargers.yml)}
   - ${file(resources/functions/search.yml)}
+  - ${file(resources/functions/tip.yml)}
   
 resources:
   - ${file(resources/tables/chargers.yml)}
@@ -54,3 +55,4 @@ resources:
   - ${file(resources/tables/tip_votes.yml)}
   - ${file(resources/tables/ratings.yml)}
   - ${file(resources/CBUser.yml)}
+  - ${file(resources/CognitoAuthorizer.yml)}
