--- a/resources/functions/adminUpdateChargers.yml
+++ b/resources/functions/adminUpdateChargers.yml
@@ -1,8 +1,8 @@
 adminUpdateChargers:
   package:
     include:
-      - src/admin/__init__py
-      - src/admin/udpate.py
+      - src/admin/__init__.py
+      - src/admin/update.py
       - src/__init__.py
   handler: src/admin/update.main
   timeout: 300 #need a long timeout to load everything, this is max
