added user endpoint

--- a/resources/CBUser.yml
+++ b/resources/CBUser.yml
@@ -1,6 +1,7 @@
 Resources:
   CBUser: 
     Type: "AWS::Cognito::UserPool"
+    DeletionPolicy: Retain
     Properties:
       Policies: 
         PasswordPolicy: 
