generate average rating on rating submission and append to charger table item

--- a/resources/functions/charger.yml
+++ b/resources/functions/charger.yml
@@ -19,5 +19,6 @@ charger:
         cors: true
         integration: lambda-proxy
         request:
-          paths:
-            id: true
+          parameters:
+            paths:
+              id: true
