--- a/resources/functions/adminUpdateChargers.yml
+++ b/resources/functions/adminUpdateChargers.yml
@@ -9,7 +9,7 @@ adminUpdateChargers:
   description: >
     Download latest data from supercharge.info and
     load into DynamoDB:${self:provider.environment.CHARGERS_TABLE}
-  # events:
-  #   - schedule:
-  #       rate: rate(24 hours)
-  #       enabled: true
+  events:
+    - schedule:
+        rate: rate(24 hours)
+        enabled: true
