--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - '3.6'
 cache: pip
 install:
-  - pip install -r requirements_test.txt
+  - pip install -g -r requirements_test.txt
   - pip install moto
 before_script:
   - flake8
