--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - flake8
 script:
   - pytest
-  - npm install -g serverless
+  - npm install -g serverless && npm install
   - sls deploy
 notifications:
   slack:
