stop deployment if pytest fails

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - flake8
 script:
   - pytest
+after_success:
   - npm install -g serverless && npm install
   - sls deploy --stage master
 notifications:
